# liquidator_v1

./: .gitignore  .sample-env  Cargo.toml  Makefile  README.md  benchmark.md  config.toml
abi/: compound_price_oracle.json  ironbank_price_oracle.json  liquidator.json  sonne_price_oracle.json
benchmarks/: Cargo.toml  benchmark-2024-04-25.txt  benchmark-2024-04-26.txt  benchmark-2024-05-01.txt  benchmark-2024-05-11.txt  benchmark-2024-05-13.txt  benchmark-2024-06-03.txt  benchmark-2024-06-12.txt
benchmarks/src/: main.rs
contract_bindings/: Cargo.toml
contract_bindings/src/: comptroller_bindings.rs  ctoken_bindings.rs  erc20_bindings.rs  lib.rs  main.rs  price_oracle_compish.rs  price_oracle_ironbank.rs  price_oracle_sonne.rs  sonne_price_oracle.rs  unitroller_bindings.rs
deployments/: hardhat-config.ts
integration_test/: Cargo.toml
integration_test/src/: liquidation_events.rs  main.rs  mock_data_provider.rs  mock_price_oracle.rs  types.rs
liquidator/: Cargo.toml
liquidator/src/: config.rs  execution.rs  lib.rs  main.rs
liquidator/src/data_provider/: mod.rs
liquidator/src/liquidator/: mod.rs
liquidator/src/price_oracle/: mod.rs
liquidator/src/types/: mod.rs  scaled_num.rs
liquidator_v1/: Cargo.toml
liquidator_v1/src/: execution.rs
old/: indexer.rs  price_updater.rs  types.rs
old/bindings/: comptroller_bindings.rs
src/: api.rs  bindings.rs  c_erc20_bindings.rs  comptroller_bindings.rs  comptroller_interface.rs  config.rs  data.rs  data_updater.rs  database.rs  database_manager.rs  db.rs  erc20_bindings.rs  execution.rs  handlers.rs  indexer.rs  liquidation.rs  liquidator.rs  liquidator_bindings.rs  main.rs  models.rs  price_updater.rs  reader.rs  reader_minimal.rs  types.rs  uniswap_anchored_view_bindings.rs  utils.rs  watcher.rs
src/bindings/: c_erc20_bindings.rs  liquidator_bindings.rs
src/data_provider/: mod.rs
src/data_updater/: price_oracle.rs
src/database_manager/: database.rs
src/db/: mod.rs
src/handlers/: borrow_handler.rs  market_entered_handler.rs  market_exited_handler.rs  new_close_factor_handler.rs  new_collateral_factor_handler.rs  new_liquidation_incentive_handler.rs  repay_borrow_handler.rs  transfer_handler.rs
src/indexer/: handlers.rs  helpers.rs  loop_controller.rs
src/liquidation/: mod.rs
src/liquidator/: liquidator_contract.rs  mod.rs
src/price_oracle/: mod.rs
src/reference_only_old/: command.rs  database_manager.rs  price_oracle.rs  processor.rs
src/types/: account.rs  account_ctoken.rs  account_ctoken_amount.rs  account_ctoken_amounts.rs  command.rs  comptroller.rs  ctoken.rs  db_traits.rs  db_types.rs  liquidate_call_data.rs  mod.rs  target_events.rs
tests/: rust_tests.rs
tests/contract-tests/: contract-test.ts
(+13 files in other folders)
