# The configuration file for your Rust package. 
# It defines your project's dependencies, version, and other metadata.

[package]
name = "liquidator_v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.39"
# http requests
reqwest = { version = "0.11", features = ["json"] }
# serialize/deserialize json
serde_json = "1.0"
serde = "1.0.114"
# serde_derive = "1.0.114"
# graphql_client = "0.13.0"
dotenv = "0.15.0"
toml = "0.8.10"
async-trait = "0.1.77"
